[package]
name = "omnios-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
heapless = "0.8.0"
postcard = "1.1.1"
ring = { version = "0.17.12", default-features = false }
serde = "1.0.218"
typenum = "1.18.0"
